Fix code styles when content too wide

--- a/src/styles/content/code.css
+++ b/src/styles/content/code.css
@@ -1,3 +1,4 @@
 code {
-  @apply rounded-s bg-theme-backgroundHighlight box-decoration-clone px-0.75 py-0.25 font-mono text-sm;
+  @apply min-w-fit rounded-s bg-theme-backgroundHighlight box-decoration-clone px-0.75 py-0.25 
+    font-mono text-sm;
 }
